K8S/angularui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: angularui-depl
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: angularui
  template:
    metadata:
     labels:
      app: angularui
    spec: 
      containers:
        - name: angularui
          image: truesky/angularui:latest
---
apiVersion: v1
kind: Service
metadata: 
  name: angularui-clusterip-srv
spec: 
  type: ClusterIP
  selector: 
    app: angularui
  ports:
  - name: angularui
    protocol: TCP
    port: 80
    targetPort: 80
