K8S/angularui-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: angularui-srv
spec: 
  type: NodePort
  selector: 
    app: angularui
  ports:
  - name: angularui
    protocol: TCP
    port: 80
    targetPort: 80
