K8S/identity-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: identityservice-srv
spec: 
  type: NodePort
  selector: 
    app: identityservice
  ports:
  - name: identityservice
    protocol: TCP
    port: 80
    targetPort: 80
