K8S/mvc-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mvc-srv
spec: 
  type: NodePort
  selector: 
    app: mvc
  ports:
  - name: mvc
    protocol: TCP
    port: 80
    targetPort: 80
