K8S/store-np-srv.yaml
apiVersion: v1
kind: Service
metadata: 
  name: storeservice-srv
spec: 
  type: NodePort
  selector: 
    app: storeservice
  ports:
  - name: storeservice
    protocol: TCP
    port: 80
    targetPort: 80
