K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-reges: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mvc-clusterip-srv
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip-srv
                port:
                  number: 80
          - path: /serviceApi
            pathType: Prefix
            backend:
              service:
                name: store-clusterip-srv
                port:
                  number: 80
